--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <li><a href="#about">About Us</a></li>
             <li><a href="#courses">Courses</a></li>
             <li><a href="#contact">Contact Us</a></li>
+            <li><a href="#">Registration</a></li>
             <li><a style="cursor:pointer;" data-toggle="modal" data-target="#login">Login</a></li>
           </ul>
         </div>
@@ -262,15 +263,14 @@
       <div class="row">
         <div class="col-md-12">
           <div class="col-md-6 res">
-            <div class="carousel slide" data-ride="carousel" data-type="multi" data-interval="3000" id="myCarousel">
+            <div class="carousel slide" data-ride="carousel" data-type="multi" data-interval="6000" id="myCarousel">
               <div class="carousel-inner">
                 <div class="item active">
                   <div class="col-md-4 col-sm-6 col-xs-12"><a><img src="images/blockchain.jpg"
                         class="img-responsive"></a>
-                    <h3 class="bottom15"><a>Blockchain</a></h3>
-                    <p class="bottom15">Blockchain is the backbone Technology of Digital
-                      CryptoCurrency BitCoin. The blockchain is a distributed database of records of all
-                      transactions or digital event that have been executed and shared among participating parties.
+                    <h3 class="bottom15">Blockchain</h3>
+                    <p class="bottom15"><a href="blockchain.html">Blockchain is the backbone Technology of Digital
+                        CryptoCurrency BitCoin.</a>
                     </p>
                   </div>
                 </div>
@@ -278,10 +278,8 @@
                 <div class="item">
                   <div class="col-md-4 col-sm-6 col-xs-12"><a><img src="images/AI&ML.jpg" class="img-responsive"></a>
                     <h3 class="bottom15"><a>AI & ML</a></h3>
-                    <p class="bottom15">AIML is an XML based mark up language meant to
-                      create artificial intelligent applications. AIML makes it possible to create human
-                      interfaces while keeping the implementation simple to program, easy to understand and highly
-                      maintainable.
+                    <p class="bottom15"><a class="" href="artificial.html">AIML is an XML based mark up language
+                        meant to create artificial intelligent applications.</a>
                     </p>
                   </div>
                 </div>
@@ -290,10 +288,9 @@
                   <div class="col-md-4 col-sm-6 col-xs-12"><a><img src="images/BusinessAnalytics.jpg"
                         class="img-responsive"></a>
                     <h3 class="bottom15"><a>Business Analytics</a></h3>
-                    <p class="bottom15">Business analytics (BA) is the practice of
-                      iterative, methodical exploration of an organization's data, with an emphasis on statistical
-                      analysis.
-                      Business analytics is used by companies committed to data-driven decision-making.
+                    <p class="bottom15"><a href="BA.html"> Business analytics is the practice of
+                        iterative, methodical exploration of an organization's data, with an emphasis on statistical
+                        analysis.</a>
                     </p>
                   </div>
                 </div>
@@ -302,10 +299,9 @@
                   <div class="col-md-4 col-sm-6 col-xs-12"><a><img src="images/datascience.jpg"
                         class="img-responsive"></a>
                     <h3 class="bottom15"><a>Datascience</a></h3>
-                    <p class="bottom15">Data science is a multidisciplinary blend of data
-                      inference, algorithm development, and technology in order to solve analytically
-                      complex problems. Troves of raw information, streaming in and stored in enterprise data
-                      warehouses.
+                    <p class="bottom15"><a href="datascience.html">Data science is a multidisciplinary blend of data
+                        inference, algorithm development, and technology in order to solve analytically
+                        complex problems.</a>
                     </p>
                   </div>
                 </div>
@@ -313,17 +309,22 @@
                 <div class="item">
                   <div class="col-md-4 col-sm-6 col-xs-12"><a><img src="images/IOT.jpg" class="img-responsive"></a>
                     <h3 class="bottom15"><a>IOT</a></h3>
-                    <p class="bottom15">“The Internet of Things (IoT) is a system of
-                      interrelated computing devices, mechanical and digital machines, objects, animals or people
-                      that are provided with unique identifiers and the ability to transfer data over a network without
-                      requiring human-to-human or human-to-computer interaction.”
+                    <p class="bottom15"><a href="iot.html">“The Internet of Things is a system of
+                        interrelated computing devices, mechanical and digital machines, objects, animals or people
+                        that are provided with unique identifiers.</a>
+                      <!-- and the ability to transfer data over a network without
+                      requiring human-to-human or human-to-computer interaction.” -->
                     </p>
                   </div>
                 </div>
 
               </div>
-              <!--<a class="left carousel-control" href="#myCarousel" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
-		  <a class="right carousel-control" href="#myCarousel" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>-->
+              <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                <i class="glyphicon glyphicon-chevron-left"></i>
+              </a>
+              <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                <i class="glyphicon glyphicon-chevron-right"></i>
+              </a>
             </div>
           </div>
 
@@ -415,7 +416,7 @@
   <!--contact us-->
   <div id="contact">
     <section id="parallax" class="parallax">
-      <div class="container">
+      <div class="container margin_get">
         <div class="row">
           <div class="col-md-4 contact_address heading_space wow" data-wow-delay="4500ms">
             <h2 class="heading heading_space">Get in Touch <span class="divider-left"></span></h2>
@@ -424,7 +425,8 @@
               <i class="icon icon-map-pin border_radius"></i>
               <h4>Visit Us</h4>
               <p class="pColor">Community Skill Park </p>
-              <p class="pColor">3rd Floor, Trans Towers Vazhuthacaud, Thiruvananthapuram Kerala, India Pin Code: 695014</p>
+              <p class="pColor">3rd Floor, Trans Towers Vazhuthacaud, Thiruvananthapuram Kerala, India Pin Code: 695014
+              </p>
             </div>
 
             <div class="item address">
@@ -443,8 +445,9 @@
           <div class="col-md-8 contact_address heading_space wow" data-wow-delay="4500ms">
             <div class="mapouter">
               <div class="gmap_canvas">
-                  <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3946.0029932105617!2d76.95568121473076!3d8.499088393889506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba608a71ea8b969%3A0xfa9cd90a553771b7!2sASAP+KERALA!5e0!3m2!1sen!2sin!4v1550812989577"
-                    frameborder="0" allowfullscreen></iframe>
+                <iframe id="map"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3946.0029932105617!2d76.95568121473076!3d8.499088393889506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba608a71ea8b969%3A0xfa9cd90a553771b7!2sASAP+KERALA!5e0!3m2!1sen!2sin!4v1550812989577"
+                  frameborder="0" allowfullscreen></iframe>
               </div>
             </div>
           </div>
@@ -518,7 +521,8 @@
         <div class="col-md-4 col-sm-4 footer_panel bottom25">
           <h3 class="heading bottom25">Keep in Touch <span class="divider-left"></span></h3>
           <p class=" address"><i class="icon-map-pin"></i>Community Skill Park </p>
-          <p class=" address"> 3rd Floor, Trans Towers Vazhuthacaud, Thiruvananthapuram Kerala, India Pin Code: 695014</p>
+          <p class=" address"> 3rd Floor, Trans Towers Vazhuthacaud, Thiruvananthapuram Kerala, India Pin Code: 695014
+          </p>
           <p class=" address"><i class="icon-phone"></i>080 4140 0440</p>
           <p class=" address"><i class="icon-mail"></i><a href="mailto:info@phemesoft.com">info@phemesoft.com</a></p>
         </div>
@@ -530,7 +534,7 @@
       <div class="row">
         <div class="col-md-12 text-center">
           <!--<p>Copyright &copy; 2019 <a href="#.">CSP</a>. all rights reserved.</p>-->
-		  <p>CSP &copy; All rights reserved.</p>
+          <p>CSP &copy; All rights reserved.</p>
         </div>
       </div>
     </div>
